--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1 id="title">Tic Tac Toe</h1>
     <div id="gameBoard">
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-        <div class="gameSquare"></div>
-
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
+      <div class="gameSquare"></div>
     </div>
-</body>
+    <h3 id="gameText">Make a move</h3>
+  </body>
 </html>
